--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .container {
     text-align: center;
+    width: 50%;
 }
 
 h1 {
@@ -28,12 +29,12 @@ h1 {
     font-size: 3.5rem;
 }
 
-p {
-    color: #00897b;
-}
-
 #joke {
-    color: #00564d;
+    font-family: 'PT Mono', monospace;
+    font-size: 22px;
+    line-height: 32px;
+    color: #fff;
+    font-weight: 400;
 }
 
 button {
@@ -41,4 +42,7 @@ button {
     background-color: #00897b;
     border: none;
     cursor: pointer;
+    margin-top: 40px;
+    font-weight: bold;
+    font-size: 20px;
 }
